# Weather-EarthQuake-Simulator

./: .env.example  .gitignore  README.md  app.js  index.html  open-site.bat  open-site.url  package-lock.json  package.json  pyproject.toml  requirements.txt  styles.css
.github/workflows/: deploy-gh-pages.yml
data/: jma_shindo_stations.json  plate_boundaries.geojson
data/processed/: jma_amedas_stations.csv
docs/: api_sources.md  long_period_ground_motion.md
scripts/: build_earthquake_presets_from_csv.js  convert_n03_municipalities.js  fetch_jma_amedas_stations.py  fetch_jma_shindo_stations.js  open_site.js  public_site.js
src/weather_simulator/: __init__.py
src/weather_simulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/weather_simulator/datasources/: __init__.py  http.py  jma_amedas.py
tests/: conftest.py  test_jma_amedas.py
web/: app.js  dev-server.js  index.html  styles.css
web/data/: earthquake_presets.json
