[project]
name = "weather-simulator"
version = "0.1.0"
description = "Weather and earthquake data collection utilities for simulation experiments."
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32",
  "pandas>=2.2",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
